--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -8175,6 +8175,7 @@ msgid "There must be at least one toolbar!"
 msgstr ""
 
 #: lazarusidestrconsts.liscoolbardesigner
+msgctxt "lazarusidestrconsts.liscoolbardesigner"
 msgid "Designer"
 msgstr ""
 
@@ -11342,15 +11343,18 @@ msgid "Key"
 msgstr "Sleutel"
 
 #: lazarusidestrconsts.liskeycatcustom
-msgid "Custom commands"
+msgctxt "lazarusidestrconsts.liskeycatcustom"
+msgid "Custom"
 msgstr ""
 
 #: lazarusidestrconsts.liskeycatdesigner
-msgid "Designer commands"
+msgctxt "lazarusidestrconsts.liskeycatdesigner"
+msgid "Designer"
 msgstr ""
 
 #: lazarusidestrconsts.liskeycatobjinspector
-msgid "Object Inspector commands"
+msgctxt "lazarusidestrconsts.liskeycatobjinspector"
+msgid "Object Inspector"
 msgstr ""
 
 #: lazarusidestrconsts.liskeyor2keysequence
@@ -15177,6 +15181,7 @@ msgid "Auto rebuild when rebuilding all"
 msgstr ""
 
 #: lazarusidestrconsts.lispckoptscustom
+msgctxt "lazarusidestrconsts.lispckoptscustom"
 msgid "Custom"
 msgstr ""
 
@@ -19826,40 +19831,37 @@ msgstr ""
 msgid "Show options"
 msgstr ""
 
-#: lazarusidestrconsts.srkmcarhelpmenu
-msgid "Help menu commands"
-msgstr ""
-
 #: lazarusidestrconsts.srkmcatclipboard
-msgid "Clipboard commands"
-msgstr ""
-
-#: lazarusidestrconsts.srkmcatcmdcmd
-msgid "Command commands"
+msgid "Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatcodetools
-msgid "CodeTools commands"
+msgid "CodeTools"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatcolselection
-msgid "Text column selection commands"
+msgid "Text column selection"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatcursormoving
-msgid "Cursor moving commands"
+msgid "Cursor moving"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatediting
-msgid "Text editing commands"
+msgid "Text editing"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatfilemenu
-msgid "File menu commands"
+msgid "File menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatfold
-msgid "Text folding commands"
+msgid "Text folding"
+msgstr ""
+
+#: lazarusidestrconsts.srkmcathelpmenu
+msgctxt "lazarusidestrconsts.srkmcathelpmenu"
+msgid "Help menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatlinewrap
@@ -19872,35 +19874,35 @@ msgid "Macros"
 msgstr "Makro's"
 
 #: lazarusidestrconsts.srkmcatmarker
-msgid "Text bookmark commands"
+msgid "Text bookmarks"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatmulticaret
-msgid "Multi caret commands"
+msgid "Multi caret"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatpackagemenu
-msgid "Package menu commands"
+msgid "Package menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatprojectmenu
-msgid "Project menu commands"
+msgid "Project menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatrunmenu
-msgid "Run menu commands"
+msgid "Run menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatsearchreplace
-msgid "Text search and replace commands"
+msgid "Text search and replace"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatselection
-msgid "Text selection commands"
+msgid "Text selection"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatsrcnotebook
-msgid "Source Notebook commands"
+msgid "Source Notebooks"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatsyncroedit
@@ -19924,11 +19926,11 @@ msgid "Template Editing (not in Cell)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcattoolmenu
-msgid "Tools menu commands"
+msgid "Tools menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatviewmenu
-msgid "View menu commands"
+msgid "View menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcommand
