--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -8406,6 +8406,7 @@ msgid "There must be at least one toolbar!"
 msgstr ""
 
 #: lazarusidestrconsts.liscoolbardesigner
+msgctxt "lazarusidestrconsts.liscoolbardesigner"
 msgid "Designer"
 msgstr ""
 
@@ -11614,15 +11615,24 @@ msgid "Key"
 msgstr "Toets"
 
 #: lazarusidestrconsts.liskeycatcustom
-msgid "Custom commands"
+#, fuzzy
+#| msgid "Custom commands"
+msgctxt "lazarusidestrconsts.liskeycatcustom"
+msgid "Custom"
 msgstr "Aanpasbare commando's"
 
 #: lazarusidestrconsts.liskeycatdesigner
-msgid "Designer commands"
+#, fuzzy
+#| msgid "Designer commands"
+msgctxt "lazarusidestrconsts.liskeycatdesigner"
+msgid "Designer"
 msgstr "Designer acties"
 
 #: lazarusidestrconsts.liskeycatobjinspector
-msgid "Object Inspector commands"
+#, fuzzy
+#| msgid "Object Inspector commands"
+msgctxt "lazarusidestrconsts.liskeycatobjinspector"
+msgid "Object Inspector"
 msgstr "Object Inspecteur commando's"
 
 #: lazarusidestrconsts.liskeyor2keysequence
@@ -15612,6 +15622,7 @@ msgid "Auto rebuild when rebuilding all"
 msgstr "Automatisch herbouwen wanneer allen herbouwd worden"
 
 #: lazarusidestrconsts.lispckoptscustom
+msgctxt "lazarusidestrconsts.lispckoptscustom"
 msgid "Custom"
 msgstr "Aanpasbaar"
 
@@ -20391,40 +20402,45 @@ msgstr ""
 msgid "Show options"
 msgstr ""
 
-#: lazarusidestrconsts.srkmcarhelpmenu
-msgid "Help menu commands"
-msgstr "Help menu acties"
-
 #: lazarusidestrconsts.srkmcatclipboard
-msgid "Clipboard commands"
+msgid "Clipboard"
 msgstr ""
 
-#: lazarusidestrconsts.srkmcatcmdcmd
-msgid "Command commands"
-msgstr "Opdrachtopdrachten"
-
 #: lazarusidestrconsts.srkmcatcodetools
-msgid "CodeTools commands"
+#, fuzzy
+#| msgid "CodeTools commands"
+msgid "CodeTools"
 msgstr "CodeToolscommando's"
 
 #: lazarusidestrconsts.srkmcatcolselection
-msgid "Text column selection commands"
+msgid "Text column selection"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatcursormoving
-msgid "Cursor moving commands"
+#, fuzzy
+#| msgid "Cursor moving commands"
+msgid "Cursor moving"
 msgstr "Cursor beweeg commando's"
 
 #: lazarusidestrconsts.srkmcatediting
-msgid "Text editing commands"
+#, fuzzy
+#| msgid "Text editing commands"
+msgid "Text editing"
 msgstr "Tekstverwerkingsopdrachten"
 
 #: lazarusidestrconsts.srkmcatfilemenu
-msgid "File menu commands"
+#, fuzzy
+#| msgid "File menu commands"
+msgid "File menu"
 msgstr "Bestandsmenu acties"
 
 #: lazarusidestrconsts.srkmcatfold
-msgid "Text folding commands"
+msgid "Text folding"
+msgstr ""
+
+#: lazarusidestrconsts.srkmcathelpmenu
+msgctxt "lazarusidestrconsts.srkmcathelpmenu"
+msgid "Help menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatlinewrap
@@ -20439,35 +20455,45 @@ msgstr "Macros"
 #: lazarusidestrconsts.srkmcatmarker
 #, fuzzy
 #| msgid "Text marker commands"
-msgid "Text bookmark commands"
+msgid "Text bookmarks"
 msgstr "Tekstmarkering opdrachten"
 
 #: lazarusidestrconsts.srkmcatmulticaret
-msgid "Multi caret commands"
+msgid "Multi caret"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatpackagemenu
-msgid "Package menu commands"
+msgid "Package menu"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcatprojectmenu
-msgid "Project menu commands"
+#, fuzzy
+#| msgid "Project menu commands"
+msgid "Project menu"
 msgstr "Project menu commandos"
 
 #: lazarusidestrconsts.srkmcatrunmenu
-msgid "Run menu commands"
+#, fuzzy
+#| msgid "Run menu commands"
+msgid "Run menu"
 msgstr "Start menu commando's"
 
 #: lazarusidestrconsts.srkmcatsearchreplace
-msgid "Text search and replace commands"
+#, fuzzy
+#| msgid "Text search and replace commands"
+msgid "Text search and replace"
 msgstr "Tekstzoek- en vervangopdrachten"
 
 #: lazarusidestrconsts.srkmcatselection
-msgid "Text selection commands"
+#, fuzzy
+#| msgid "Text selection commands"
+msgid "Text selection"
 msgstr "Tekstselectieopdrachten"
 
 #: lazarusidestrconsts.srkmcatsrcnotebook
-msgid "Source Notebook commands"
+#, fuzzy
+#| msgid "Source Notebook commands"
+msgid "Source Notebooks"
 msgstr "Bron notitieblok opdrachten"
 
 #: lazarusidestrconsts.srkmcatsyncroedit
@@ -20491,11 +20517,15 @@ msgid "Template Editing (not in Cell)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmcattoolmenu
-msgid "Tools menu commands"
+#, fuzzy
+#| msgid "Tools menu commands"
+msgid "Tools menu"
 msgstr "Hulpmiddelen menu commando's"
 
 #: lazarusidestrconsts.srkmcatviewmenu
-msgid "View menu commands"
+#, fuzzy
+#| msgid "View menu commands"
+msgid "View menu"
 msgstr "Toon Menu commando's"
 
 #: lazarusidestrconsts.srkmcommand
